# swarm_intelligence

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/: swarm.md
docs/superpowers/plans/: 2026-06-16-swarm-pheromone-extension.md
docs/superpowers/specs/: 2026-06-16-swarm-pheromone-extension-design.md
examples/: decompose_and_run.py
swarm/: __init__.py  agent.py  environment.py  llm.py  messaging.py  orchestrator.py  pheromone.py  task.py
swarm/hooks/: scout_hook.py
tests/: test_agent.py  test_environment.py  test_integration.py  test_orchestrator.py  test_pheromone.py  test_task.py
